--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "jest": "^20.0.0",
     "jest-fetch-mock": "^1.1.1",
     "json-loader": "^0.5.4",
+    "expect":"1.20.2",
+    "enzyme":"2.9.1",
     "node-sass": "^4.5.2",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
+    "prop-types":"15.5.10",
     "sass-loader": "^6.0.4",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.17.0",
