--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
+    "jquery": "3.2.1",
     "prop-types":"15.5.10",
     "sass-loader": "^6.0.4",
     "source-map-loader": "^0.2.1",
